--- a/src/p2-homeworks/h1/Message.module.css
+++ b/src/p2-homeworks/h1/Message.module.css
@@ -2,12 +2,15 @@
     color: greenyellow;
     column-rule-color: #bbffbb;
 }
+.s.message {
+    background-color: crimson;
+}
 
 .message {
     display: flex;
     align-items: flex-end;
     margin: 10px;
-
+    background-color: crimson;
 }
 .avatar {
     height: 50px;
