--- a/src/p2-homeworks/h3/Greeting.module.css
+++ b/src/p2-homeworks/h3/Greeting.module.css
@@ -1,7 +1,44 @@
-.someClass {
-
+.greeting{
+    display: flex;
+    align-items: flex-start;
 }
-
-.error {
-    border: 1px solid red;
+.error{
+    color: red;
+    height: 20px;
+    margin-left: 10px;
+}
+.input{
+    margin: 10px;
+    background: #083300;
+    color: #99ff99;
+}
+.input:focus{
+    outline: none;
+    border: #99ff99; solid: 2px;
+}
+.error.input{
+    margin: 10px;
+    background: #083300;
+    color: #99ff99;
+    border: 2px; solid: red;
+    outline: none;
+}
+.button{
+    margin: 10px;
+    width: 60px;
+    background: #083300;
+    color: #99ff99;
+    outline: none;
+}
+.button:focus{
+    outline: #005500;
+}
+.button:active{
+    background: #99ff99;
+}
+.button:disabled{
+    color: #005500;
+}
+.count{
+    margin: 10px;
 }
