--- a/src/p2-homeworks/h1/Message.module.css
+++ b/src/p2-homeworks/h1/Message.module.css
@@ -1,50 +1,35 @@
-.Message {
-    color: greenyellow;
-    column-rule-color: #bbffbb;
-}
-.s.message {
-    background-color: crimson;
-}
-
 .message {
-    display: flex;
-    align-items: flex-end;
-    margin: 10px;
-    background-color: crimson;
+ display: flex;
+ align-items: flex-end;
 }
 .avatar {
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
+ height: 50px;
+ width: 50px;
+ border-radius: 50%;
 }
 .content {
-    padding: 10px;
-    border-radius: 5px 5px 5px 0;
-    /*background-color: rgba(255, 255, 255, 0.3);*/
-    background-color: darkslategrey;
+ padding: 10px;
+ border-radius: 5px 5px 5px 0;
+ background-color: blueviolet;
 }
-
-.angel {
-    height: 15px;
-    width: 15px;
-    background: radial-gradient(circle at 0 0, rgba(0, 0, 0, 0) 15px,  darkslategrey 0)
-
-
-}
-
-.name {
-    font-size: 20px;
-    font-weight: bold;
-    color: #bbffbb;
+.angle {
+ height: 15px;
+ width: 15px;
+ background: radial-gradient(circle at 0 0, rgba(0, 0, 0, 0) 15px,  blueviolet 0)
 }
 .text {
-    max-width: 300px;
-    min-width: 150px;
-    word-wrap: break-word;
+ max-width: 300px;
+ min-width: 150px;
+ word-wrap: break-word;
 }
 .time {
-    display: flex;
-    justify-content: flex-end;
+ display: flex;
+ justify-content: flex-end;
 
-    color: cornflowerblue;
+ color: cornflowerblue;
+}
+.name {
+font-size: 20px;
+ font-weight: bolder;
+ color: blue;
 }
